add field to contact, vehicle and policy
