# api/openapi.json
@@ -771,6 +771,28 @@
           }
         }
       }
+    },
+    "/field": {
+      "post": {
+        "tags": [
+          "field"
+        ],
+        "summary": "User profile retrieval",
+        "description": "Retrieve user's self profile information",
+        "operationId": "addField",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "401": {
+            "description": "Not authenticated",
+            "content": {}
+          }
+        }
+      }
     }
   },
   "components": {
